<resources>
    <string name="app_name">EClinic</string>
    <string name="don_t_have_an_account_register">Don\'t have an account? Register</string>
    <string name="login">Login</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="enter_county">Enter County</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="register">Register</string>
    <string name="proceed">Proceed</string>
    <string name="invalid_credentials">Invalid Credentials</string>
    <string name="try_again">Try Again</string>
    <string name="invalid_credentails_please_try_again">We have noticed the phone number or the pin entered is incorrect please try again</string>
</resources>