<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_background"
    android:gravity="center"
    android:padding="3dp">


    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_invalid_credentials"
        android:layout_margin="3dp"/>

    <TextView
        android:id="@+id/tv_invalid_credentials_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/invalid_credentials"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        style="@style/TextAppearance.AppCompat.Headline"
        android:textColor="@color/colorPrimary"
        android:singleLine="true"
        android:layout_margin="3dp"/>

    <TextView
        android:id="@+id/tv_invalid_credentials"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/invalid_credentails_please_try_again"
        style="@style/TextAppearance.AppCompat.Small"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:layout_margin="3dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_try_again"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/try_again"
        android:theme="@style/MaterialTheme" />


</LinearLayout>