<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".fragments.RegisterFragment">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="vertical"
            android:padding="5dp">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_launcher" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:textColorHint="@android:color/white"
                app:counterEnabled="true"
                app:counterMaxLength="100"
                app:counterTextColor="@android:color/white"
                app:errorEnabled="true"
                app:hintTextAppearance="@style/TextAppearance.AppCompat.Body1"
                app:hintTextColor="@android:color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/et_background_selector"
                    android:hint="@string/enter_email"
                    android:inputType="textEmailAddress"
                    android:maxLength="150"
                    android:textColor="@android:color/white" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:textColorHint="@android:color/white"
                app:counterEnabled="true"
                app:counterMaxLength="50"
                app:counterTextColor="@android:color/white"
                app:errorEnabled="true"
                app:hintTextAppearance="@style/TextAppearance.AppCompat.Body1"
                app:hintTextColor="@android:color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/et_background_selector"
                    android:hint="@string/enter_username"
                    android:inputType="textPersonName"
                    android:maxLength="50"
                    android:textColor="@android:color/white" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:textColorHint="@android:color/white"
                app:counterEnabled="true"
                app:counterMaxLength="10"
                app:counterTextColor="@android:color/white"
                app:errorEnabled="true"
                app:hintTextAppearance="@style/TextAppearance.AppCompat.Body1"
                app:hintTextColor="@android:color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/et_background_selector"
                    android:hint="@string/enter_phone_number"
                    android:inputType="phone"
                    android:maxLength="10"
                    android:textColor="@android:color/white" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_county"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:textColorHint="@android:color/white"
                app:counterEnabled="true"
                app:counterMaxLength="50"
                app:counterTextColor="@android:color/white"
                app:errorEnabled="true"
                app:hintTextAppearance="@style/TextAppearance.AppCompat.Body1"
                app:hintTextColor="@android:color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_county"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/et_background_selector"
                    android:hint="@string/enter_county"
                    android:inputType="text"
                    android:maxLength="50"
                    android:textColor="@android:color/white" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:textColorHint="@android:color/white"
                app:counterEnabled="true"
                app:counterMaxLength="12"
                app:counterTextColor="@android:color/white"
                app:hintTextColor="@android:color/white"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@android:color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/et_background_selector"
                    android:hint="@string/enter_password"
                    android:inputType="textPassword"
                    android:maxLength="12"
                    android:textColor="@android:color/white" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/register"
                android:textColor="@android:color/white"
                android:theme="@style/MaterialTheme"
                app:rippleColor="@android:color/white" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="5dp"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:text="@string/already_have_an_account_login"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@android:color/white"
                android:theme="@style/MaterialTheme" />

        </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>